# WordLink-WDA

./: .gitignore  README.md  WebDriverRunner.mobileprovision  benchmark_tile_inference.py  config.json  diag.py  failed_words.json  ios_video_stream.py  last_detection_failure.json  last_letters.json  latest_dots.json  latest_letters.json  pyproject.toml  quicktime_usb_probe.py  read_letters.py  run_source.command  run_source.sh  setup_wordlink.command  solve_words.py  start_wda.py  tempCodeRunnerFile.py  test.py  test_wda_drag_latency.py
WebDriverAgentRunner-Runner.app/: Info.plist  WebDriverAgentRunner-Runner
WebDriverAgentRunner-Runner.app.before-distribution-sign/: Info.plist  WebDriverAgentRunner-Runner  embedded.mobileprovision
WebDriverAgentRunner-Runner.app.before-distribution-sign/Frameworks/: libXCTestSwiftSupport.dylib
WebDriverAgentRunner-Runner.app.before-distribution-sign/_CodeSignature/: CodeResources
WebDriverAgentRunner-Runner.app/_CodeSignature/: CodeResources
data/: scowl_words.txt
examples/: appium_control.py  basic_control.py  control_screen.py
models/: tile_cnn.npz  tile_cnn.pt
scripts/: build_nuitka.sh  build_scowl_dictionary.py  find_wda.sh  install_build_deps.sh  install_runtime_deps.sh  install_source_runtime_deps.sh  open_wda.sh  prepare_dist_permissions.sh  review_tile_dataset.py  start_appium.sh  start_wda.sh  train_tile_cnn.py  update_wda_provision.sh
src/iphone_wda_usb/: __init__.py  cli.py  client.py  iproxy.py
wordlink_ios_stream/: __init__.py  coremedia.py  decoder.py  protocol.py  source.py  transport.py
(+16 files in other folders)
